--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,7 @@ jobs:
       - run: echo "This job is listing all the critical changes introduced by the code"
 
   dev-sign-off:
+    working_directory: /go/src/github.com/palantir/bulldozer
     docker:
       - image: circleci/golang:1.13.4-stretch
      steps:
@@ -78,6 +79,7 @@ jobs:
            webhook: '${SLACK_WEBHOOK}' 
 
   qa-sign-off:
+    working_directory: /go/src/github.com/palantir/bulldozer
     docker:
       - image: circleci/golang:1.13.4-stretch
      steps:
