--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,15 +96,17 @@
        - dev-sign-off:
            filters: { tags: { only: /.*/ } }
        - dev-sign-off-approval: # <<< A job that will require manual approval in the CircleCI web application.
-           type: approval # <<< This key-value pair will set your workflow to a status of "On Hold"
+           type: approval # <<< This key-value pair will set your workflow to a status of "On Hold"        
        - list-critical-changes:
            filters: { tags: { only: /.*/ } }
            requires:
             - dev-sign-off
+            - dev-sign-off-approval
        - build:
            filters: { tags: { only: /.*/ } }
            requires:
             - dev-sign-off
+            - dev-sign-off-approval
             - list-critical-changes
        - automated-tests:
            filters: { tags: { only: /.*/ } }
@@ -122,3 +124,4 @@
            type: approval # <<< This key-value pair will set your workflow to a status of "On Hold"
            requires: # We only run the "hold" job when test2 has succeeded
             - qa-sign-off
+            - qa-sign-off-approval
