--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,27 +25,21 @@
 
 # version: 2
  jobs:
-   dev-sign-off:
-     machine:
-       image: ubuntu-1604:202004-01
+   test-cluster:
+     executor: aws-eks/python3
+     parameters:
+       cluster-name:
+         description: |
+           Name of the EKS cluster
+         type: string
      steps:
-       - checkout
-       - slack/notify:
-           channel: CQ4NHT0DC
-           color: '#42e2f4'
-           message: Please click on the following link and approve the on-hold job "dev-sign-off-approval" for the most recent workflow run for the branch / commit $CIRCLE_BRANCH - https://app.circleci.com/pipelines/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
-           webhook: '${SLACK_WEBHOOK}'
-
-   qa-sign-off:
-     machine:
-       image: ubuntu-1604:202004-01
-     steps:
-       - checkout
-       - slack/notify:
-           channel: CQ4NHT0DC
-           color: '#42e2f4'
-           message: Please click on the following link and approve the on-hold job "qa-sign-off-approval" for the most recent workflow run for the branch / commit $CIRCLE_BRANCH - https://app.circleci.com/pipelines/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
-           webhook: '${SLACK_WEBHOOK}'
+       - kubernetes/install
+       - aws-eks/update-kubeconfig-with-authenticator:
+           cluster-name: << parameters.cluster-name >>
+       - run:
+           command: |
+             kubectl get services
+           name: Test cluster
 
    build:
      working_directory: /go/src/github.com/palantir/bulldozer
@@ -78,50 +72,61 @@
        - *store-results
        - *store-artifacts
 
-   list-critical-changes:
+   check-downtime:
      docker:
        - image: circleci/golang:1.13.4-stretch
      steps:
        - checkout
-       - run: echo "This job is listing all the critical changes introduced by the code"
+       - run: echo "Verifying that downtime is within the next windows limits"
+
+   prepare-ffcommit:
+     docker:
+       - image: circleci/golang:1.13.4-stretch
+     steps:
+       - checkout
+       - run: echo "Preparing Fast Forward Commit"
+
+   create-deploy-branch:
+     docker:
+       - image: circleci/golang:1.13.4-stretch
+     steps:
+       - checkout
+       - run: git branch deploy-$(date '+%d/%m/%Y %H:%M:%S')
 
  orbs:
-   slack: circleci/slack@3.4.1
+   aws-eks: circleci/aws-eks@1.0.0
+   kubernetes: circleci/kubernetes@0.4.0
  version: 2.1
 
  workflows:
    version: 2
    build:
      jobs:
-       - dev-sign-off:
+       - check-downtime:
            filters: { tags: { only: /.*/ } }
-       - dev-sign-off-approval: # <<< A job that will require manual approval in the CircleCI web application.
-           type: approval # <<< This key-value pair will set your workflow to a status of "On Hold"        
-       - list-critical-changes:
+       - prepare-ffcommit:
            filters: { tags: { only: /.*/ } }
            requires:
-            - dev-sign-off
-            - dev-sign-off-approval
+            - check-downtime
        - build:
            filters: { tags: { only: /.*/ } }
            requires:
-            - dev-sign-off
-            - dev-sign-off-approval
-            - list-critical-changes
+            - prepare-ffcommit
        - automated-tests:
            filters: { tags: { only: /.*/ } }
            requires:
             - build
-       - qa-sign-off:
-           filters: { tags: { only: /.*/ } }
+       - aws-eks/create-cluster:
+          cluster-name: prod-clone
+            filters: { tags: { only: /.*/ } }
            requires:
             - automated-tests
-       - qa-sign-off-approval: # <<< A job that will require manual approval in the CircleCI web application.
-           type: approval # <<< This key-value pair will set your workflow to a status of "On Hold"
-           requires: # We only run the "hold" job when test2 has succeeded
-            - automated-tests
-       - block-if-long-maintainer-and-next-window-is-not-saturday: # <<< A job that will require manual approval in the CircleCI web application.
-           type: approval # <<< This key-value pair will set your workflow to a status of "On Hold"
-           requires: # We only run the "hold" job when test2 has succeeded
-            - qa-sign-off
-            - qa-sign-off-approval
+       - test-cluster:
+          cluster-name: prod-clone
+            filters: { tags: { only: /.*/ } }
+           requires:
+            - aws-eks/create-cluster
+       - create-deploy-branch:
+           filters: { tags: { only: /.*/ } }
+           requires:
+            - test-cluster
