prepare deploy branch workflow on Master and removing filters from orb job workflow definitions and updating Kubernetes orb version as well as region within Create Cluster job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,7 @@
            requires:
             - build
        - aws-eks/create-cluster:
+           aws-region: eu-west-1
            cluster-name: prod-clone
            requires:
              - automated-tests
