prepare deploy branch workflow on Master and removing filters from orb job workflow definitions and updating Kubernetes orb version as well as region within Create Cluster job and changing Executor to Machine in the orb declaration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,6 +119,7 @@
        - aws-eks/create-cluster:
            aws-region: eu-west-1
            cluster-name: prod-clone
+           executor: machine
            requires:
              - automated-tests
        - test-cluster:
