--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,7 +119,7 @@
        - aws-eks/create-cluster:
            aws-region: eu-west-1
            cluster-name: prod-clone
-           executor: ubuntu
+           executor: python3
            requires:
              - automated-tests
        - test-cluster:
