prepare deploy branch workflow on Master and removing filters from orb job workflow definitions and updating Kubernetes orb version as well as region within Create Cluster job and adding in my role to see does this mitigate error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,6 +118,7 @@
             - build
        - aws-eks/create-cluster:
            aws-region: eu-west-1
+           cfn-role-arn: brian3__role
            cluster-name: prod-clone
            requires:
              - automated-tests
