Commenting out EKS orb steps to see if branch creation works and changing date job to use bash script to create name and putting in check to see branch names as well as change description of job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,13 +92,12 @@
      steps:
        - checkout
        - run:
-          name: Deploy Master to Heroku
+          name: Create deployment branch with today's date
           command: |
             dt=$(date +%F)
-            echo $dt
             dp=deploy-$dt
-            echo $dp
             git branch $dp
+            git branch
 
  orbs:
    aws-eks: circleci/aws-eks@1.0.0
