Commenting out EKS orb steps to see if branch creation works and changing date job to use bash script to create name and putting in check to see branch names as well as change description of job and adding in merge steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,9 @@
             dt=$(date +%F)
             dp=deploy-$dt
             git branch $dp
-            git branch
+            git branch production
+            git checkout production
+            git merge $dp
 
  orbs:
    aws-eks: circleci/aws-eks@1.0.0
