Commenting out EKS orb steps to see if branch creation works and changing date job to use bash script to create name and putting in check to see branch names as well as change description of job and adding in merge steps and adding in EKS deploy job to run on new production Branch and using old syntax

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,7 +139,10 @@
  #          requires:
  #           - test-cluster
        - aws-eks/create-cluster:
-           filters: { tags: { only: production } }
+           filters:
+             branches:
+               only:
+                 - production
            aws-profile: 
            aws-region: eu-west-1
            cluster-name: prod-clone
