Adding into further orb steps and copying over .aws/config file to repo folder and commenting out second create cluster command as well as amending job dependency name for delete job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,11 +158,11 @@
        - aws-eks/delete-cluster:
            cluster-name: eks-demo-deployment
            requires:
-             - aws-eks/test-cluster
+             - test-cluster
        - create-deploy-branch:
            filters: { tags: { only: /.*/ } }
            requires:
-            - test-cluster
+            - aws-eks/delete-cluster
  #      - aws-eks/create-cluster:
  #          filters:
  #            branches:
