Adding into further orb steps and copying over .aws/config file to repo folder and commenting out second create cluster command as well as amending job dependency name for delete job and adding in config file into variables used

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,6 +145,7 @@
            aws-profile: 
            aws-region: eu-west-1
            cluster-name: prod-clone
+           config-file: ~/.aws/config
            requires:
              - automated-tests
        - create-deployment:
