Adding into further orb steps and copying over .aws/config file to repo folder and commenting out second create cluster command as well as amending job dependency name for delete job and adding in config file into variables used and using loads of parameters as per repo that I discovered and taking out extra parameters but adding in project envvars and ensuring that cluster name is the same in all jobs in the workflow - prod clone2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,19 +146,19 @@
 #             - automated-tests
        - aws-eks/create-cluster:
            aws-region: eu-west-1
-           cluster-name: prod-clone
+           cluster-name: prod-clone2
            requires:
              - automated-tests
        - create-deployment:
-           cluster-name: prod-clone
+           cluster-name: prod-clone2
            requires:
              - aws-eks/create-cluster
        - test-cluster:
-           cluster-name: prod-clone
+           cluster-name: prod-clone2
            requires:
              - aws-eks/create-cluster
        - aws-eks/delete-cluster:
-           cluster-name: prod-clone
+           cluster-name: prod-clone2
            requires:
              - test-cluster
        - create-deploy-branch:
