--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,7 +115,7 @@
             dp=deploy-$dt
             git branch $dp
             now=(date +"%T")
-            if [[ $now -eq "06:00:00" ]] 
+            if [[ $now -eq '06:00:00' ]] 
             then 
               git branch production
               git checkout production
