Adding in current time logic and uncommenting create-deploy-branch job and using greater than less than format and taking out multiple then statements

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,7 +115,7 @@
             dp=deploy-$dt
             git branch $dp
             currenttime=$(date +%H:%M)
-            if [[ "$currenttime" > "05:59" ]] || [[ "$currenttime" < "06:01" ]]; then 
+            if [[ "$currenttime" > "05:59" ]] || [[ "$currenttime" < "06:01" ]];  
             then 
               git branch production
               git checkout production
