--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,6 +115,7 @@
             dp=deploy-$dt
             git branch $dp
             currenttime=$(date +%H:%M)
+            echo $currenttime
             if [[ "$currenttime" > "05:59" ]] || [[ "$currenttime" < "06:01" ]];  
             then 
               git branch production
