Adding in current time logic and uncommenting create-deploy-branch job and using greater than less than format and taking out multiple then statements and putting in debugging and changing statement to be an equals one

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,7 +116,8 @@
             git branch $dp
             currenttime=$(date +%H:%M)
             echo $currenttime
-            if [[ "$currenttime" > "05:59" ]] || [[ "$currenttime" < "06:01" ]];  
+   #         if [[ "$currenttime" > "05:59" ]] || [[ "$currenttime" < "06:01" ]];
+            if [[ "$currenttime" = "06:00" ]];  
             then 
               git branch production
               git checkout production
