--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,9 +125,21 @@
               echo "Now is not the time to deploy"
             fi
 
+   deployment-description-alert:
+     docker:
+       - image: circleci/golang:1.13.4-stretch
+     steps:
+       - checkout
+       - slack/notify:
+           channel: CQ4NHT0DC
+           color: '#42e2f4'
+           message: $CIRCLE_USERNAME is deploying revision $CIRCLE_SHA1 to Production
+           webhook: '${SLACK_WEBHOOK}'
+
  orbs:
    aws-eks: circleci/aws-eks@1.0.0
    kubernetes: circleci/kubernetes@0.11.1
+   slack: circleci/slack@3.4.1
  version: 2.1
 
  workflows:
@@ -148,9 +160,13 @@
            filters: { tags: { only: /.*/ } }
            requires:
             - build
+       - deployment-description-alert:
+           filters: { tags: { only: /.*/ } }
+           requires:
+            - automated-tests
 #       - aws-eks/install-aws-iam-authenticator:
 #           requires:
-#             - automated-tests
+#             - automated-tests       
 #       - aws-eks/create-cluster:
 #           aws-region: eu-west-1
 #           cluster-name: prod-clone2
