Adding in current time logic and uncommenting create-deploy-branch job and using greater than less than format and taking out multiple then statements and putting in debugging and changing statement to be an equals one and adding in Slack alert before Kubernetes deployment as well as doing a git push to Production and running of script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,6 +121,8 @@
               git branch production
               git checkout production
               git merge $dp
+              git push origin production
+              bash test-deployment.sh
             else
               echo "Now is not the time to deploy"
             fi
