Adding in current time logic and uncommenting create-deploy-branch job and using greater than less than format and taking out multiple then statements and putting in debugging and changing statement to be an equals one and adding in Slack alert before Kubernetes deployment as well as doing a git push to Production and running of script and putting in false test to trigger conditions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,7 +116,7 @@
             git branch $dp
             currenttime=$(date +%H:%M)
             echo $currenttime
-            if [[ "$currenttime" = "06:00" ]];  
+            if [[ "$currenttime" != "06:00" ]];  
             then 
               git branch production
               git checkout production
