Adding in current time logic and uncommenting create-deploy-branch job and using greater than less than format and taking out multiple then statements and putting in debugging and changing statement to be an equals one and adding in Slack alert before Kubernetes deployment as well as doing a git push to Production and running of script and putting in false test to trigger conditions and using git push -u command and running command to change remote repo from SSH to HTTPS

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,6 +121,8 @@
               git branch production
               git checkout production
               git merge $dp
+              git remote set-url origin https://github.com/brianoh1979/bulldozer.git
+              git remote -v
               git push -u origin production:production
               bash test-deployment.sh
             else
