Adding in current time logic and uncommenting create-deploy-branch job and using greater than less than format and taking out multiple then statements and putting in debugging and changing statement to be an equals one and adding in Slack alert before Kubernetes deployment as well as doing a git push to Production and running of script and putting in false test to trigger conditions and using git push -u command and putting script step up a bit to test it and cron schedule to run every hour Mon-Sat

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,14 +116,13 @@
             git branch $dp
             currenttime=$(date +%H:%M)
             echo $currenttime
-            if [[ "$currenttime" != "06:00" ]];  
+            if [[ "$currenttime" = "06:00" ]];  
             then 
               git branch production
               git checkout production
               git merge $dp
-              bash test-deployment.sh
-              git remote -v
               git push -u origin production:production
+              bash test-deployment.sh
             else
               echo "Now is not the time to deploy"
             fi
@@ -146,8 +145,16 @@
  version: 2.1
 
  workflows:
-   version: 2
+#   version: 2
    build:
+     triggers:
+      - schedule:
+          cron: "0 0-23 * * 1-6"
+          filters:
+            branches:
+              only:
+                - master
+  
      jobs:
        - check-downtime:
            filters: { tags: { only: /.*/ } }
