End to end test and putting in job to test code on K8S and triggering error code in script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -196,7 +196,7 @@
        - test-cluster:
            cluster-name: prod-clone2
            requires:
-             - aws-eks/create-cluster
+             - create-deployment
        - test-code-on-K8S:
            filters: { tags: { only: /.*/ } }
            requires:
