--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,13 +157,13 @@
  workflows:
 #   version: 2
    build:
-     triggers:
-      - schedule:
-          cron: "0 0-23 * * 1-6"
-          filters:
-            branches:
-              only:
-                - master
+#     triggers:
+#      - schedule:
+#          cron: "0 0-23 * * 1-6"
+#          filters:
+#            branches:
+#              only:
+#                - master
   
      jobs:
        - check-downtime:
