--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 #Comment to trigger new pull request
 #merge when ready
 #Switched on Only Build Pull requests feature for this project
+#Comment to trigger commit on Server
 common:
   godel-cache:
     key: &godel-cache-key v1-godel-cache-{{ checksum "godelw" }}-{{ checksum "godel/config/godel.yml" }}
