--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,7 @@
        - image: circleci/golang:1.13.4-stretch
      steps:
        - checkout
+       - echo $AWS_AREA
        - *restore-godel-cache
        - run: ./godelw version
        - *save-godel-cache
@@ -155,16 +156,7 @@
  version: 2.1
 
  workflows:
-#   version: 2
-   build:
-#     triggers:
-#      - schedule:
-#          cron: "0 0-23 * * 1-6"
-#          filters:
-#            branches:
-#              only:
-#                - master
-  
+   build:  
      jobs:
        - check-downtime:
            filters: { tags: { only: /.*/ } }
@@ -173,6 +165,8 @@
            requires:
             - check-downtime
        - build:
+           context:
+             - Brian-Context
            filters: { tags: { only: /.*/ } }
            requires:
             - prepare-ffcommit
